force-app/main/default/objects/Opportunity_Product__c/Opportunity_Product__c.object-meta.xml
<CustomObject>
    <label>Opportunity Product</label>
    <nameField>
        <displayFormat>OL{00000000}</displayFormat>
        <label>Opportunity Product Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>